tests/baselines/reference/parserComputedPropertyName29.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName29.ts(3,5): error TS1164: Computed property names are not allowed in class property declarations.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName29.ts(4,5): error TS1164: Computed property names are not allowed in class property declarations.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName29.ts(3,11): error TS2304: Cannot find name 'id'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName29.ts (3 errors) ====
    class C {
        // yes ASI
        [e] = id++
        ~~~
!!! error TS1164: Computed property names are not allowed in class property declarations.
              ~~
!!! error TS2304: Cannot find name 'id'.
        [e2]: number
        ~~~~
!!! error TS1164: Computed property names are not allowed in class property declarations.
    }